--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "devDependencies": {
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "vite": "^6.0.5"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
     "swiper": "^11.2.2",
     "tailwindcss": "^4.0.3"
-  }
+  },
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
